# ManagerPulse

./: .Dockerignore  .gitignore  Dockerfile  debug.py  docker-compose.yaml  pyproject.toml
managerpulse/: app.py  db_connection.py  enviroments.py  environment.py  server.py
managerpulse/core/models/: client_model.py  product_model.py  sale_model.py
managerpulse/routes/v1/: client_routes.py  product_routes.py  sale_routes.py
