[tool.poetry]
name = "ManagerPulse"
version = "0.1.0"
description = ""
authors = ["Adriano R. de Sousa <adrianorodriguesdsousa@ufpi.edu.br>"]
readme = "README.md"

[tool.poetry.scripts]
server = "managerpulse.server:run"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymongo = { extras = ["srv"], version = "^4.6.1" }
httpx = "^0.25.2"
pydantic = "^2.5.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
